--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "leaflet": "^1.3.4",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
-    "sequelize": "^4.41.2"
+    "sequelize": "^4.41.2",
+    "pg": "^7.7.1"
   }
 }
